--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Your Site</title>
+    <title>Ваш сайт</title>
 </head>
 <body>
     <div id="container">
@@ -16,7 +16,7 @@
             <div id="header_promo" class="card">
                 <div class="header_promo_firstBlock">
                     <div class="card header_promo_firstBlock_title">
-                        <h1>Your Brand</h1>
+                        <h1>Название продукта</h1>
                     </div>
                     <div class="header_promo_firstBlock_img">
                         <img src="https://images.unsplash.com/photo-1634449278077-820aacbf6aa4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3540&q=80" alt="" width="700px" height="600px">
@@ -147,10 +147,11 @@
                 </div>   
             </div>
             <div id="form_control">
-                <h2 class="form_control_segment">Your brand</h2>
+                <h2 class="form_control_segment">Название сайта</h2>
+                <h3> До конца акции осталось: </h3>
                 <div class="timer">
-                    <p class="minutes"></p>
-                    <p class="seconds"></p>
+                    <p id="min"></p>
+                    <p id="sec"></p>
                 </div>
                 <div class="form_control">
                     <div class="form_control_promo">
