--- a/index.html
+++ b/index.html
@@ -13,26 +13,27 @@
             <video autoplay muted loop id="myVideo">
                 <source src="https://media.istockphoto.com/videos/fresh-green-leaf-with-water-drop-over-the-water-nature-leaf-branch-video-id1144920714" type="video/mp4">
             </video>
+            <div class="card header_promo_firstBlock_title">
+                <h1>Название продукта</h1>
+            </div>
             <div id="header_promo" class="card">
                 <div class="header_promo_firstBlock">
-                    <div class="card header_promo_firstBlock_title">
-                        <h1>Название продукта</h1>
-                    </div>
                     <div class="header_promo_firstBlock_img">
                         <img src="https://images.unsplash.com/photo-1634449278077-820aacbf6aa4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3540&q=80" alt="" width="700px" height="600px">
                     </div>
-                </div>
-                <div class="header_promo_secondBlock">
-                    <div class="header_promo_secondBlock_list">
-                        <ul>
-                            <li>Lorem, ipsum dolor.</li>
-                            <li>Lorem, ipsum dolor.</li>
-                            <li>Lorem, ipsum dolor.</li>
-                        </ul>
+                    <div class="header_promo_secondBlock">
+                        <div class="header_promo_secondBlock_list">
+                            <ul>
+                                <li>Lorem, ipsum dolor.</li>
+                                <li>Lorem, ipsum dolor.</li>
+                                <li>Lorem, ipsum dolor.</li>
+                            </ul>
+                        </div>
+                        <div class="btn">
+                            <a href="#form_control"><button>Заказать</button></a>
+                        </div>
                     </div>
-                    <div class="btn">
-                        <a href="#form_control"><button>Заказать</button></a>
-                    </div>
+
                 </div>
             </div>
         </header>
@@ -150,7 +151,8 @@
                 <h2 class="form_control_segment">Название сайта</h2>
                 <h3> До конца акции осталось: </h3>
                 <div class="timer">
-                    <p id="min"></p>
+                    <p id="min">
+                    </p>
                     <p id="sec"></p>
                 </div>
                 <div class="form_control">
